kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
spec:
  rules:
    - host: naturewall.hopto.org  
      http:
        paths:
        - path: /
          pathType: Exact
          backend:
            service:
              name: frontend
              port:
                number: 80
